--- a/public/main.html
+++ b/public/main.html
@@ -33,7 +33,7 @@
 <div ng-controller="AppCtrl">
   <div class="col"><h3>Messages</h3>
     <div class="overflow">
-      <p ng-repeat='message in messages'>{{message.user}}: {{message.text}}</p>
+      <p ng-repeat='message in messages'>{{message.username}}: {{message.text}}</p>
     </div>
   </div>
   <div class="col"><h3>Users</h3>
@@ -75,12 +75,17 @@ angular.module('myApps', ['ngResource','ngRoute'])
     $scope.users = data.users;
   });
 
+  socket.on('connected', function (message) {
+   $scope.messages.push(message);
+  });
+
+  
   socket.on('newMessage', function (message) {
     $scope.messages.push(message);
   });
 
-  socket.on('change:name', function (data) {
-    changeName(data.oldName, data.newName);
+  socket.on('userNicknameUpdated', function (data) {
+    changeName(data.oldUsername, data.newUsername);
   });
 
   socket.on('user:join', function (data) {
@@ -129,15 +134,13 @@ angular.module('myApps', ['ngResource','ngRoute'])
   // ==============================
 
   $scope.changeName = function () {
-    socket.emit('change:name', {
-      name: $scope.newName
+    socket.emit('setNickname', {
+      username: $scope.newName
     }, function (result) {
       if (!result) {
         alert('There was an error changing your name');
       } else {
-        
         changeName($scope.name, $scope.newName);
-
         $scope.name = $scope.newName;
         $scope.newName = '';
       }
